--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
 
   stan:
-    #image: madzone/php83-app-2024:octane
+    image: madzone/php83-app-2024:octane
     build:
       context: .
       dockerfile: ./docker/Dockerfile.octane
       args:
-        PHP_VERSION: '8.3-bullseye'
+        PHP_VERSION: '8.3-zts-bullseye'
     ports:
       - "8081:80" #http
       - "443:443" #https
