chore: repo madzone v1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   stan:
-    image: madzone/php83-app-2024:octane
+    image: madzone/ironfence-app:v1
     build:
       context: .
       dockerfile: ./docker/Dockerfile.octane
