chore: config cron supervisor

--- a/docker/supervisord/supervisord.octane.conf
+++ b/docker/supervisord/supervisord.octane.conf
@@ -31,3 +31,11 @@ user=root
 redirect_stderr=true
 stdout_logfile=/horizon.log
 stopwaitsecs=300
+
+[program:laravel-cron]
+command=docker-php-entrypoint php /var/www/app/artisan schedule:run
+user=root
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/laravel-cron.err.log
+stdout_logfile=/var/log/laravel-cron.out.log
