--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,30 +30,11 @@ services:
   #   networks:
   #     - laravel      
 
+  # redis
   redis:
-    image: "redis:alpine"
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test:
-        - CMD
-        - redis-cli
-        - ping
-      retries: 3
-      timeout: 5s
-    deploy:
-      replicas: 1
-      resources:
-        limits:
-          cpus: "0.5"
-          memory: 200M
-        reservations:
-          cpus: "0.1"
-          memory: 20M
-      restart_policy:
-        condition: on-failure
-    networks:
-      - laravel 
+      image: redis:latest
+      networks:
+          - laravel
 
   search:
     container_name: elasticsearch_search
