fix: alter superisord schedule

--- a/docker/supervisord/supervisord.octane.conf
+++ b/docker/supervisord/supervisord.octane.conf
@@ -33,7 +33,7 @@ stdout_logfile=/horizon.log
 stopwaitsecs=300
 
 [program:laravel-cron]
-command=docker-php-entrypoint php /var/www/app/artisan schedule:run
+command=docker-php-entrypoint php /var/www/app/artisan schedule:work
 user=root
 autostart=true
 autorestart=true
