--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,67 +9,69 @@ services:
       args:
         PHP_VERSION: '8.3-zts-bullseye'
     ports:
-      - "80:80" #http
-      - "443:443" #https
+      - "80:80"  # HTTP
+      - "443:443"  # HTTPS
     depends_on:
-        - redis
+      - redis
+      - search
     networks:
-        - laravel
-
-  # mariadb:
-  #   image: mariadb:latest
-  #   restart: unless-stopped
-  #   environment:
-  #     MYSQL_DATABASE: deepdefense2
-  #     MYSQL_ROOT_PASSWORD: root
-  #     MYSQL_PASSWORD: root
-  #     MYSQL_USER: root
-  #   volumes:
-  #     - ./.docker/mariadb/dbdata:/var/lib/mysql
-  #   ports:
-  #     - "3388:3306"
-  #   networks:
-  #     - laravel      
+      - laravel
 
   redis:
-    image: "redis:alpine"
+    image: redis:alpine
     ports:
       - "6379:6379"
     healthcheck:
-      test:
-        - CMD
-        - redis-cli
-        - ping
+      test: ["CMD", "redis-cli", "ping"]
       retries: 3
       timeout: 5s
     volumes:
       - redisdata:/data  
     networks:
-      - laravel 
+      - laravel
 
   search:
     container_name: elasticsearch_search
     image: elasticsearch:7.17.15
     ports:
-      - 9200:9200
+      - "9200:9200"
     environment:
       - discovery.type=single-node
-      # - ES_JAVA_OPTS=-Xms4g -Xmx4g
     networks:
       - laravel
 
-  # kibana:
-  #   image: kibana:7.17.15
-  #   ports:
-  #     - "5601:5601"
-  #   environment:
-  #     ELASTICSEARCH_HOSTS: "http://search:9200"
-  #   networks:
-  #     - laravel
+# Se necessário, descomente e configure os serviços MariaDB e Kibana
+
+# mariadb:
+#   image: mariadb:latest
+#   restart: unless-stopped
+#   environment:
+#     MYSQL_DATABASE: deepdefense2
+#     MYSQL_ROOT_PASSWORD: root
+#     MYSQL_PASSWORD: root
+#     MYSQL_USER: root
+#   volumes:
+#     - ./.docker/mariadb/dbdata:/var/lib/mysql
+#   ports:
+#     - "3388:3306"
+#   networks:
+#     - laravel
+
+# kibana:
+#   image: kibana:7.17.15
+#   ports:
+#     - "5601:5601"
+#   environment:
+#     ELASTICSEARCH_HOSTS: "http://search:9200"
+#   networks:
+#     - laravel
+
 networks:
-    laravel:
-        driver: bridge
+  laravel:
+    driver: bridge
 
 volumes:
+  redisdata:
+    driver: local
   esdata:
-    driver: local   
+    driver: local
