chore alter docker compose 00:52

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   stan:
-    image: madzone/ironfence-app:v1
+    # image: madzone/ironfence-app:v1
     build:
       context: .
       dockerfile: ./docker/Dockerfile.octane
@@ -17,16 +17,9 @@ services:
     networks:
       - laravel
 
+      # redis
   redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      retries: 3
-      timeout: 5s
-    volumes:
-      - redisdata:/data  
+    image: redis:latest
     networks:
       - laravel
 
