bugfix: reset hard for back config docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.9'
 
 services:
   stan:
-    # image: madzone/ironfence-app:v1
+    image: madzone/ironfence-app:v1
     build:
       context: .
       dockerfile: ./docker/Dockerfile.octane
       args:
-        PHP_VERSION: '8.3-zts-bullseye'
+        PHP_VERSION: '8.3-bullseye'
     ports:
       - "80:80"  # HTTP
       - "443:443"  # HTTPS
